# computer_vision

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  ClassDiagram.cd  Makefile  README.md  build.sh  cmake_install.cmake  cnn.cpp  cnn.hpp  cnn_config.hpp  compile_commands.json  computer_vision.sln  computer_vision.vcxproj  computer_vision.vcxproj.filters  core.cpp  core.hpp  detect_and_display.cpp  detect_and_display.h  detector.cpp  detector.h  detector.hpp  distance.cpp  distance.hpp  facial_recognition.sln  facial_recognition.vcxproj  facial_recognition.vcxproj.filters  haar_cascade_detector.cpp  haar_cascade_detector.hpp  kuhn_munkres.cpp  kuhn_munkres.h  kuhn_munkres.hpp  main.cpp  mode.hpp  run.sh  tracker.cpp  tracker.h  tracker.hpp  utils.cpp  (+1 more)
embedding/: vector.txt  vector.xml
ie_cpu_extension/: Makefile
include/: cnn.hpp  common.hpp  core.hpp  detector.hpp  draw_roi.hpp  kuhn_munkres.hpp  main.hpp  mode.hpp  ocv_common.hpp  tracker.hpp
model/: model_downloader.sh
model/intel/person-vehicle-bike-detection-crossroad-0078/FP16/: person-vehicle-bike-detection-crossroad-0078.xml
model/ir_facenet/: 20180402-114759.mapping  20180402-114759.xml  20180408-102900.mapping  20180408-102900.xml
model/ssd_mobilenet/: frozen_inference_graph.mapping  frozen_inference_graph.xml
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
roi/: keypoints.yml
sample_video/: output.avi
src/: cnn.cpp  core.cpp  detect_and_display.cpp  detector.cpp  distance.cpp  draw_roi.cpp  haar_cascade_detector.cpp  kuhn_munkres.cpp  main.cpp  tracker.cpp  utils.cpp
